# crawler

./: .gitignore  Justfile  LICENSE  README.md  pyproject.toml  ruff.toml
.github/actions/validation/: action.yaml
.github/workflows/: master-validate.yaml
src/crawler/: __init__.py  logger.py  start.py
src/crawler/app/: models.py  runner.py
src/crawler/collector/: api.py  models.py  page.py
src/crawler/extractor/: api.py  url.py  utils.py
tests/: conftest.py  test_config.py  test_extract.py  test_runner.py
